5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4081/executions/1643_2711.log
== TEST (2019-04-08 19:26:18) 
-- CODE:
valor(float(input("disponivel:")))
ru(int(input("ticketsdoru:")))
valortic(float(input("valortickets:")))
passesonibus(int(input("quantidadepassesonibus:")))
valorpasses(float(input("valorpasses:")))
if(valor+ru+valortic+passesonibus+valorpasses):
	print("suficiente")
else:
	print("insuficiente")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor(float(input()))
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:26:39) 
-- CODE:
valor(int(input("disponivel:")))
ru(int(input("ticketsdoru:")))
valortic(float(input("valortickets:")))
passesonibus(int(input("quantidadepassesonibus:")))
valorpasses(float(input("valorpasses:")))
if(valor+ru+valortic+passesonibus+valorpasses):
	print("suficiente")
else:
	print("insuficiente")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor(int(input()))
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:27:07) 
-- CODE:
valor=int(input("disponivel:"))
ru=int(input("ticketsdoru:"))
valortic=float(input("valortickets:"))
passesonibus=int(input("quantidadepassesonibus:"))
valorpasses=float(input("valorpasses:"))
if(valor+ru+valortic+passesonibus+valorpasses):
	print("suficiente")
else:
	print("insuficiente")
-- OUTPUT:
suficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:27:19) 
-- CODE:
valor=int(input("disponivel:"))
ru=int(input("ticketsdoru:"))
valortic=float(input("valortickets:"))
passesonibus=int(input("quantidadepassesonibus:"))
valorpasses=float(input("valorpasses:"))
if(valor+ru+valortic+passesonibus+valorpasses):
	print("suficiente")
else:
	print("insuficiente")
-- OUTPUT:
suficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:27:26) 
-- CODE:
valor=int(input("disponivel:"))
ru=int(input("ticketsdoru:"))
valortic=float(input("valortickets:"))
passesonibus=int(input("quantidadepassesonibus:"))
valorpasses=float(input("valorpasses:"))
if(valor+ru+valortic+passesonibus+valorpasses):
	print("suficiente")
else:
	print("insuficiente")
-- OUTPUT:
suficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 19:27:39) 
-- CODE:
valor=int(input("disponivel:"))
ru=int(input("ticketsdoru:"))
valortic=float(input("valortickets:"))
passesonibus=int(input("quantidadepassesonibus:"))
valorpasses=float(input("valorpasses:"))
if(valor+ru+valortic+passesonibus+valorpasses):
	print("suficiente")
else:
	print("insuficiente")
-- EXECUTION TIME:
0.185347
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
suficiente
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
suficiente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:28:12) 
-- CODE:
valor=int(input("disponivel:"))
ru=int(input("ticketsdoru:"))
valortic=float(input("valortickets:"))
passesonibus=int(input("quantidadepassesonibus:"))
valorpasses=float(input("valorpasses:"))
if(valor+ru+valortic+passesonibus+valorpasses):
	mensagem("suficiente")
else:
	mensagem("insuficiente")
print(mensagem)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    mensagem("suficiente")
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:28:53) 
-- CODE:
valor=int(input("disponivel:"))
ru=int(input("ticketsdoru:"))
valortic=float(input("valortickets:"))
passesonibus=int(input("quantidadepassesonibus:"))
valorpasses=float(input("valorpasses:"))
if(valor+ru+valortic+passesonibus+valorpasses):
	print("suficiente")
else:
	print("insuficiente")
	
-- OUTPUT:
suficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 19:29:12) 
-- CODE:
valor=int(input("disponivel:"))
ru=int(input("ticketsdoru:"))
valortic=float(input("valortickets:"))
passesonibus=int(input("quantidadepassesonibus:"))
valorpasses=float(input("valorpasses:"))
if(valor+ru+valortic+passesonibus+valorpasses):
	print("suficiente")
else:
	print("insuficiente")
	
-- EXECUTION TIME:
0.259533
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
suficiente
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
suficiente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:29:43) 
-- CODE:
valor=int(input("disponivel:"))
ru=int(input("ticketsdoru:"))
valortic=float(input("valortickets:"))
passesonibus=int(input("quantidadepassesonibus:"))
valorpasses=float(input("valorpasses:"))
if(valor+ru+valortic+passesonibus+valorpasses):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
	
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 19:29:58) 
-- CODE:
valor=int(input("disponivel:"))
ru=int(input("ticketsdoru:"))
valortic=float(input("valortickets:"))
passesonibus=int(input("quantidadepassesonibus:"))
valorpasses=float(input("valorpasses:"))
if(valor+ru+valortic+passesonibus+valorpasses):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
	
-- EXECUTION TIME:
0.194059
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:31:44) 
-- CODE:
valor=float(input("disponivel:"))
ru=int(input("ticketsdoru:"))
valortic=float(input("valortickets:"))
passesonibus=int(input("quantidadepassesonibus:"))
valorpasses=float(input("valorpasses:"))
if(valor+ru+valortic+passesonibus+valorpasses):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
	
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 19:31:47) 
-- CODE:
valor=float(input("disponivel:"))
ru=int(input("ticketsdoru:"))
valortic=float(input("valortickets:"))
passesonibus=int(input("quantidadepassesonibus:"))
valorpasses=float(input("valorpasses:"))
if(valor+ru+valortic+passesonibus+valorpasses):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
	
-- EXECUTION TIME:
0.142168
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:31:52) 
-- CODE:
valor=float(input("disponivel:"))
ru=int(input("ticketsdoru:"))
valortic=float(input("valortickets:"))
passesonibus=int(input("quantidadepassesonibus:"))
valorpasses=float(input("valorpasses:"))
if(valor+ru+valortic+passesonibus+valorpasses):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
	
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 19:32:27) 
-- CODE:
valor=float(input("disponivel:"))
ru=int(input("ticketsdoru:"))
valortic=float(input("valortickets:"))
passesonibus=int(input("quantidadepassesonibus:"))
valorpasses=float(input("valorpasses:"))
if(valor+ru+valortic+passesonibus+valorpasses):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
	
-- EXECUTION TIME:
0.12504
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:12:15) 
-- CODE:
valor=float(input("disponivel:"))
ru=int(input("ticketsdoru:"))
valortic=float(input("valortickets:"))
passesonibus=int(input("quantidadepassesonibus:"))
valorpasses=float(input("valorpasses:"))
if(valor+ru+valortic+passesonibus+valorpasses):
	print("SUFICIENTE.")
else:
	print("INSUFICIENTE.")
	
-- OUTPUT:
SUFICIENTE.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 18:12:31) 
-- CODE:
valor=float(input("disponivel:"))
ru=int(input("ticketsdoru:"))
valortic=float(input("valortickets:"))
passesonibus=int(input("quantidadepassesonibus:"))
valorpasses=float(input("valorpasses:"))
if(valor+ru+valortic+passesonibus+valorpasses):
	print("SUFICIENTE.")
else:
	print("INSUFICIENTE.")
	
-- EXECUTION TIME:
0.13383
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE.
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:13:37) 
-- CODE:
valor=float(input("disponivel:"))
ru=int(input("ticketsdoru:"))
valortic=float(input("valortickets:"))
passesonibus=int(input("quantidadepassesonibus:"))
valorpasses=float(input("valorpasses:"))
if(valor+ru+valortic+passesonibus+valorpasses):
	mensagem("SUFICIENTE")
else:
	mensagem("INSUFICIENTE")
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    mensagem("SUFICIENTE")
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:14:26) 
-- CODE:
valor=float(input("disponivel:"))
ru=int(input("ticketsdoru:"))
valortic=float(input("valortickets:"))
passesonibus=int(input("quantidadepassesonibus:"))
valorpasses=float(input("valorpasses:"))
if(valor+ru+valortic+passesonibus+valorpasses):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")

-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 18:14:42) 
-- CODE:
valor=float(input("disponivel:"))
ru=int(input("ticketsdoru:"))
valortic=float(input("valortickets:"))
passesonibus=int(input("quantidadepassesonibus:"))
valorpasses=float(input("valorpasses:"))
if(valor+ru+valortic+passesonibus+valorpasses):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")

-- EXECUTION TIME:
0.149934
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:16:31) 
-- CODE:
valor=float(input("disponivel:"))
ru=int(input("ticketsdoru:"))
valortic=float(input("valortickets:"))
passesonibus=int(input("quantidadepassesonibus:"))
valorpasses=float(input("valorpasses:"))
if(valor+ru+valortic+passesonibus+valorpasses):
	print("suficiente", .upper())
else:
	print("insuficiente", .upper())

-- ERROR:
File "XXXX", line 7
    print("suficiente", .upper())
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:16:52) 
-- CODE:
valor=float(input("disponivel:"))
ru=int(input("ticketsdoru:"))
valortic=float(input("valortickets:"))
passesonibus=int(input("quantidadepassesonibus:"))
valorpasses=float(input("valorpasses:"))
if(valor+ru+valortic+passesonibus+valorpasses):
	print("suficiente", .upper())
else:
	print("insuficiente", .upper())

-- ERROR:
File "XXXX", line 7
    print("suficiente", .upper())
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:17:53) 
-- CODE:
valor=float(input("disponivel:"))
ru=int(input("ticketsdoru:"))
valortic=float(input("valortickets:"))
passesonibus=int(input("quantidadepassesonibus:"))
valorpasses=float(input("valorpasses:"))
if(valor+ru+valortic+passesonibus+valorpasses):
	print("suficiente")
else:
	print("insuficiente"

-- ERROR:
File "XXXX", line 10
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:18:42) 
-- CODE:
valor=float(input("disponivel:"))
ru=int(input("ticketsdoru:"))
valortic=float(input("valortickets:"))
passesonibus=int(input("quantidadepassesonibus:"))
valorpasses=float(input("valorpasses:"))
if(valor+ru+valortic+passesonibus+valorpasses):
	print("SUFICIENTE", .upper())
else:
	print("INSUFICIENTE", .upper())
-- ERROR:
File "XXXX", line 7
    print("SUFICIENTE", .upper())
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:20:06) 
-- CODE:
val=float(input("disponivel:"))
ru=int(input("ticketsdoru:"))
tic=float(input("valortickets:"))
bus=int(input("quantidadepassesonibus:"))
pas=float(input("valorpasses:"))
if(val+ru+tic+bus+pas):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 18:20:20) 
-- CODE:
val=float(input("disponivel:"))
ru=int(input("ticketsdoru:"))
tic=float(input("valortickets:"))
bus=int(input("quantidadepassesonibus:"))
pas=float(input("valorpasses:"))
if(val+ru+tic+bus+pas):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- EXECUTION TIME:
0.127635
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:22:00) 
-- CODE:
val=float(input("disponivel:"))
ru=int(input("ticketsdoru:"))
tic=float(input("valortickets:"))
bus=int(input("quantidadepassesonibus:"))
pas=float(input("valorpasses:"))
if(val+ru+tic+bus+pas):
	print("suficiente", .lower())
else:
	print("insuficiente", .lower())
-- ERROR:
File "XXXX", line 7
    print("suficiente", .lower())
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:22:23) 
-- CODE:
val=float(input("disponivel:"))
ru=int(input("ticketsdoru:"))
tic=float(input("valortickets:"))
bus=int(input("quantidadepassesonibus:"))
pas=float(input("valorpasses:"))
if(val+ru+tic+bus+pas):
	print("suficiente".lower())
else:
	print("insuficiente".lower())
-- OUTPUT:
suficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 18:22:40) 
-- CODE:
val=float(input("disponivel:"))
ru=int(input("ticketsdoru:"))
tic=float(input("valortickets:"))
bus=int(input("quantidadepassesonibus:"))
pas=float(input("valorpasses:"))
if(val+ru+tic+bus+pas):
	print("suficiente".lower())
else:
	print("insuficiente".lower())
-- EXECUTION TIME:
0.124511
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
suficiente
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
suficiente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 18:23:05) 
-- CODE:
val=float(input("disponivel:"))
ru=int(input("ticketsdoru:"))
tic=float(input("valortickets:"))
bus=int(input("quantidadepassesonibus:"))
pas=float(input("valorpasses:"))
if(val+ru+tic+bus+pas):
	print("suficiente".upper())
else:
	print("insuficiente".upper())
-- EXECUTION TIME:
0.191352
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:23:16) 
-- CODE:
val=float(input("disponivel:"))
ru=int(input("ticketsdoru:"))
tic=float(input("valortickets:"))
bus=int(input("quantidadepassesonibus:"))
pas=float(input("valorpasses:"))
if(val+ru+tic+bus+pas):
	print("suficiente".upper())
else:
	print("insuficiente".upper())
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 18:23:31) 
-- CODE:
val=float(input("disponivel:"))
ru=int(input("ticketsdoru:"))
tic=float(input("valortickets:"))
bus=int(input("quantidadepassesonibus:"))
pas=float(input("valorpasses:"))
if(val+ru+tic+bus+pas):
	print("suficiente".upper())
else:
	print("insuficiente".upper())
-- EXECUTION TIME:
0.164619
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 18:24:04) 
-- CODE:
val=float(input("disponivel:"))
ru=int(input("ticketsdoru:"))
tic=float(input("valortickets:"))
bus=int(input("quantidadepassesonibus:"))
pas=float(input("valorpasses:"))
if(val+ru+tic+bus+pas):
	print("suficiente".upper())
else:	
	print("insuficiente".upper())
-- EXECUTION TIME:
0.17294
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
disponivel:ticketsdoru:valortickets:quantidadepassesonibus:valorpasses:SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:24:06) 
-- CODE:
val=float(input("disponivel:"))
ru=int(input("ticketsdoru:"))
tic=float(input("valortickets:"))
bus=int(input("quantidadepassesonibus:"))
pas=float(input("valorpasses:"))
if(val+ru+tic+bus+pas):
	print("suficiente".upper())
else:	
	print("insuficiente".upper())
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 18:24:20) 
-- CODE:
val=float(input("disponivel:"))
ru=int(input("ticketsdoru:"))
tic=float(input("valortickets:"))
bus=int(input("quantidadepassesonibus:"))
pas=float(input("valorpasses:"))
if(val+ru+tic+bus+pas):
	print("suficiente".upper())
else:	
	print("insuficiente".upper())
-- EXECUTION TIME:
0.209429
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:27:24) 
-- CODE:
val=float(input("disponivel:"))
ru=int(input("ticketsdoru:"))
tic=float(input("valortickets:"))
bus=int(input("quantidadepassesonibus:"))
pas=float(input("valorpasses:"))
if(val+ru+tic+bus+pas):
	print("suficiente".upper())
	print("insuficiente".upper())
	
-- OUTPUT:
SUFICIENTE
INSUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:27:44) 
-- CODE:
val=float(input("disponivel:"))
ru=int(input("ticketsdoru:"))
tic=float(input("valortickets:"))
bus=int(input("quantidadepassesonibus:"))
pas=float(input("valorpasses:"))
if(val+ru+tic+bus+pas):
	print("suficiente".upper())
	print("insuficiente".upper())
	
-- OUTPUT:
SUFICIENTE
INSUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 18:27:50) 
-- CODE:
val=float(input("disponivel:"))
ru=int(input("ticketsdoru:"))
tic=float(input("valortickets:"))
bus=int(input("quantidadepassesonibus:"))
pas=float(input("valorpasses:"))
if(val+ru+tic+bus+pas):
	print("suficiente".upper())
	print("insuficiente".upper())
	
-- EXECUTION TIME:
0.196309
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
INSUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
INSUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:29:25) 
-- CODE:
val=float(input("disponivel:"))
ru=int(input("ticketsdoru:"))
tic=float(input("valortickets:"))
bus=int(input("quantidadepassesonibus:"))
pas=float(input("valorpasses:"))
if(val+ru+tic+bus+pas):
	print("suficiente".upper())
	print("insuficiente".upper())
	
-- OUTPUT:
SUFICIENTE
INSUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:34:38) 
-- CODE:
val=float(input("disponivel:"))
ru=int(input("ticketsdoru:"))
tic=float(input("valortickets:"))
bus=int(input("quantidadepassesonibus:"))
pas=float(input("valorpasses:"))
soma=(val+ru+tic+bus+pas)
if:(valor)
	print("suficiente".upper())
else:	
	print("insuficiente".upper())
	
-- ERROR:
File "XXXX", line 7
    if:(valor)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:35:41) 
-- CODE:
val=float(input("disponivel:"))
ru=int(input("ticketsdoru:"))
tic=float(input("valortickets:"))
bus=int(input("quantidadepassesonibus:"))
pas=float(input("valorpasses:"))
soma=(val+ru+tic+bus+pas)
if:(val>soma) 
	print("suficiente".upper())
else:	
	print("insuficiente".upper())
	
-- ERROR:
File "XXXX", line 7
    if:(val>soma) 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:38:18) 
-- CODE:
val=float(input("disponivel:"))
ru=int(input("ticketsdoru:"))
tic=float(input("valortickets:"))
bus=int(input("quantidadepassesonibus:"))
pas=float(input("valorpasses:"))
soma=(ru*tic)+(bus*pas)
if:(soma<=val) 
	print("suficiente".upper())
else:	
	print("insuficiente".upper())
	
-- ERROR:
File "XXXX", line 7
    if:(soma<=val) 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:38:35) 
-- CODE:
val=float(input("disponivel:"))
ru=int(input("ticketsdoru:"))
tic=float(input("valortickets:"))
bus=int(input("quantidadepassesonibus:"))
pas=float(input("valorpasses:"))
soma=(ru*tic+bus*pas)
if:(soma<=val) 
	print("suficiente".upper())
else:	
	print("insuficiente".upper())
	
-- ERROR:
File "XXXX", line 7
    if:(soma<=val) 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:39:05) 
-- CODE:
val=float(input("disponivel:"))
ru=int(input("ticketsdoru:"))
tic=float(input("valortickets:"))
bus=int(input("quantidadepassesonibus:"))
pas=float(input("valorpasses:"))
soma=(ru*tic)+(bus*pas)
if:(soma==val) 
	print("suficiente".upper())
else:	
	print("insuficiente".upper())
	
-- ERROR:
File "XXXX", line 7
    if:(soma==val) 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:39:39) 
-- CODE:
val=float(input("disponivel:"))
ru=int(input("ticketsdoru:"))
tic=float(input("valortickets:"))
bus=int(input("quantidadepassesonibus:"))
pas=float(input("valorpasses:"))
soma=(ru*tic)+(bus*pas)
if:(soma<=val) 
	print("suficiente")
else:	
	print("insuficiente")
	
-- ERROR:
File "XXXX", line 7
    if:(soma<=val) 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:39:50) 
-- CODE:
val=float(input("disponivel:"))
ru=int(input("ticketsdoru:"))
tic=float(input("valortickets:"))
bus=int(input("quantidadepassesonibus:"))
pas=float(input("valorpasses:"))
soma=(ru*tic)+(bus*pas)
if(soma<=val): 
	print("suficiente")
else:	
	print("insuficiente")
	
-- OUTPUT:
suficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 18:40:00) 
-- CODE:
val=float(input("disponivel:"))
ru=int(input("ticketsdoru:"))
tic=float(input("valortickets:"))
bus=int(input("quantidadepassesonibus:"))
pas=float(input("valorpasses:"))
soma=(ru*tic)+(bus*pas)
if(soma<=val): 
	print("suficiente")
else:	
	print("insuficiente")
	
-- EXECUTION TIME:
0.145717
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
suficiente
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
insuficiente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:40:20) 
-- CODE:
val=float(input("disponivel:"))
ru=int(input("ticketsdoru:"))
tic=float(input("valortickets:"))
bus=int(input("quantidadepassesonibus:"))
pas=float(input("valorpasses:"))
soma=(ru*tic)+(bus*pas)
if(soma<=val): 
	print("suficiente" .upper())
else:	
	print("insuficiente" .upper())
	
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 18:40:30) 
-- CODE:
val=float(input("disponivel:"))
ru=int(input("ticketsdoru:"))
tic=float(input("valortickets:"))
bus=int(input("quantidadepassesonibus:"))
pas=float(input("valorpasses:"))
soma=(ru*tic)+(bus*pas)
if(soma<=val): 
	print("suficiente" .upper())
else:	
	print("insuficiente" .upper())
	
-- EXECUTION TIME:
0.121034
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
